# mytaxplus

./: .gitignore  Makefile  PRD.md  README.md  ea-form-schema-fields.json  storage.rules  tax_rate_categories_2025.md  tax_relief_rules_2025.md
.cursor/rules/: backend-dal-service.mdc  frontend-nextjs-architecture.mdc  validation-zod.mdc
backend/: .env  .env.example  .gitignore  README.md  pyproject.toml
backend/app/: config.py  deps.py  firebase_integration.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth_session.py  chat.py  documents.py  filing.py  profile.py  reliefs.py  tax.py
docs/: document-ai-setup.md
frontend/: .env.example  .gitignore  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/components/auth/: auth-panel.tsx
frontend/components/layout/: app-shell.tsx  user-menu.tsx
frontend/components/providers/: auth-provider.tsx
frontend/components/tax/: api-status.tsx
frontend/components/ui/: mat-icon.tsx
frontend/dal/documents/: document-ai.ts  firestore-documents.ts  index.ts  types.ts
frontend/dal/profile/: firestore-profile.ts  index.ts
frontend/dal/reliefs/: firestore-relief-claims.ts
frontend/dal/tax-context/: firestore-tax-context.ts  index.ts  types.ts
frontend/dal/users/: firestore-users.ts  index.ts
frontend/lib/: api.ts  auth-session.ts  mock-data.ts  services.ts  types.ts
frontend/lib/api/: auth-session.ts  chat.ts  documents.ts  filing.ts  (+3 more)
src/: AGENTS.md  package.json
src/app/: globals.css
src/lib/: date.ts  mock-data.ts
(+137 files in other folders)
