[project]
name = "mytaxplus-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "firebase-admin>=7.1.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.26",
    "uvicorn[standard]>=0.44.0",
]
